# velo

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SOUL.md  com.velomail.app.metainfo.xml  index.html  install.ps1  install.sh  opencode.json  package-lock.json  package.json  plan.md  splashscreen.html  tsconfig.json  velo.spec
.agents/: changed-files.txt
.github/workflows/: packaging.yml  release.yml  update-homebrew.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: Prompting-Guide.md  advanced-filters.md  advanced-templates.md  architecture-overview.md  architecture.md  attachment-vault.md  campaigns-mail-merge.md  compliance-engine.md  contact-intelligence.md  development.md  future.md  i18n-localization.md  keyboard-shortcuts.md  pgp-encryption.md  quick-replies.md  rag-implementation-plan.md  velo-phases-5-16-plan.md  velo-qa-stabilization.md  velo-replan.md  velo-stabilization-plan.md  workflow-engine.md
landing/: package-lock.json  package.json  wrangler.jsonc
src/: App.tsx  ComposerWindow.tsx  ThreadWindow.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: appicon-dark.icns  appicon.icns
src-tauri/src/: commands.rs  dns.rs  lib.rs  oauth.rs  vector_search.rs
src-tauri/src/contacts/: csv.rs
src-tauri/src/deliverability/: dnsbl.rs  mod.rs
src-tauri/src/export/: mbox.rs  mod.rs  pdf_report.rs  scheduler.rs  types.rs
src-tauri/src/imap/: client.rs  mod.rs  pool.rs  types.rs
src-tauri/src/pgp/: cache.rs  crypto.rs  keyring.rs  mod.rs
src-tauri/src/smtp/: client.rs
src-tauri/src/vault/: mod.rs  ops.rs  pdf.rs
src/constants/: accountColors.ts  campaignDefaults.ts  campaignTemplates.ts  helpContent.ts  shortcuts.test.ts  shortcuts.ts  themes.test.ts  themes.ts  workflowPresets.ts
src/hooks/: useKeyboardShortcuts.ts  useRouteNavigation.ts
src/i18n/: i18n.test.ts  index.ts
src/locales/: i18n.ts  index.ts
src/router/: navigate.test.ts  navigate.ts  routeTree.tsx
src/services/: badgeManager.ts  domainChecker.ts  emailActions.test.ts  emailActions.ts  i18nService.ts
src/stores/: accountStore.test.ts  accountStore.ts  campaignStore.ts  composerStore.test.ts  composerStore.ts  contactStore.ts  contextMenuStore.ts  (+9 more)
(+384 files in other folders)
