[package]
name = "velo"
version = "0.4.21" # x-release-please-version
description = "Email at the speed of thought"
authors = ["Avihay"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
sequoia-openpgp = { version = "2.2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
futures = "0.3"
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
csv = "1.3"
utf7-imap = "0.3"
socket2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
lopdf = "0.34"
zip = { version = "2", default-features = false, features = ["deflate"] }
openssl = "0.10.79"
rustls-webpki = "0.103.13"
tar = "0.4.45"
quinn-proto = "0.11.14"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", default-features = false, features = ["ksni"] }
